# AI-assisted-job-search-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  run_discovery.bat
config/: .env.example  config.yaml.example  cover_letter_draft.example.txt  cover_letter_draft.txt  cv.yaml.example  prompts.yaml
data/samples/: discovery_report.md  field_catalog.yaml  field_mappings.json  final_schema.sql  job_4105575977_20260403_125159.json  job_4380695895_20260403_125159.json  job_4392903020_20260403_125159.json  schema_summary.md
docs/: PLAN.md  project-summary.md
scripts/: cleanup_errors.py  export_db.py  fix_incomplete_cover_letters.py  test_login.py  view_db.py
scripts/phase0_discovery/: analyze_fields.py  discover_fields.py  generate_schema.py
src/job_search/: __init__.py  __main__.py
src/job_search/ai/: cover_letter.py  prompt_manager.py  screener.py
src/job_search/core/: config.py  database.py  state.py
src/job_search/export/: exporter.py
src/job_search/orchestration/: coordinator.py
src/job_search/scraping/: auth.py  details.py  models.py  search.py
src/job_search/utils/: api_rotation.py  logging.py
src/job_search/web/: app.py
src/job_search/web/templates/: base.html  import_jobs.html  index.html  job_detail.html  jobs.html  runner.html  stats.html
tests/: conftest.py  test_api_rotation.py  test_config.py  test_database.py  test_details_404.py  test_prompt_manager.py  test_state.py
utils/: analyze_title_keywords.py
