[project]
name = "ai-job-search-tool"
version = "0.1.0"
description = "AI-assisted LinkedIn job search with automated screening and cover letter generation"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.18.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "google-genai>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "click>=8.1.7",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[project.scripts]
job-search = "job_search.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search"]

[dependency-groups]
dev = []
